Fixes jumpy toolbar icons

--- a/src/style/shared/icons.less
+++ b/src/style/shared/icons.less
@@ -17,7 +17,7 @@
         box-sizing: content-box;        
         width: 1.6rem;
         height: 1.6rem;
-        padding-bottom: 0.2rem;        
+        padding-bottom: 2px; // Px values don't encounter REM issues on Retina
         fill: @warm-white;
         stroke: @warm-white;
         color: @warm-gray;
